# galliard

./: .gitignore  LICENSE  MANIFEST.in  README.md  net.jdieter.galliard.appdata.xml  net.jdieter.galliard.desktop  net.jdieter.galliard.yml  pyproject.toml
.github/: copilot-instructions.md
galliard/: __init__.py  __main__.py  app.py  cache.py  config.py  media_keys.py  models.py  mpd_conn.py  mpd_snapcast.py  notifications.py  preferences.py  system_tray.py  window.py
galliard/utils/: album_art.py  artists.py  async_task_queue.py  context_menu.py  glib.py  gtk_styling.py  sorting.py  widget_classes.py
galliard/widgets/: __init__.py  albums_view.py  artists_view.py  async_ui_helper.py  files_view.py  header_bar.py  library_view.py  mpd_item_row.py  now_playing.py  player_controls.py  playlist_view.py  search_results_view.py
tests/: Containerfile  README.md  conftest.py  run-in-container.sh
tests/data/: test3.flac
tests/integration/: test_mpd_conn.py  test_mpd_conn_extras.py  test_mpd_monitor.py  test_preferences.py  test_snapcast.py  test_widget_binding.py
tests/live/: test_mpd_live.py
tests/smoke/: test_app_boot.py
tests/unit/: test_album_art_math.py  test_artists.py  test_async_task_queue.py  test_cache.py  test_config.py  test_models.py  test_search_hierarchy.py  test_sorting.py  test_status_emission.py
