[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "galliard"
version = "0.1.0"
description = "A GNOME client for Music Player Daemon"
authors = [{name = "Jonathan Dieter", email = "jonathan@dieter.ie"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyGObject>=3.40.0",
    "python-mpd2>=3.0.0",
    "pyxdg>=0.27",
    "snapcast>=2.3.7",
]
keywords = ["mpd", "music", "gnome", "gtk4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

[project.urls]
Homepage = "https://github.com/jdieter/galliard"
Repository = "https://github.com/jdieter/galliard"
Issues = "https://github.com/jdieter/galliard/issues"

[tool.setuptools]
script-files = ["bin/galliard"]

#[project.scripts-files]
#galliard = "bin/galliard"

#[tool.setuptools.packages.find]
#include = ["galliard*"]

#[tool.setuptools.package-data]
#galliard = ["data/**/*"]
